@@ -20,6 +20,10 @@
       type: keyword
       description: >
         Java class the log is coming from.
+    - name: thread
+      type: keyword
+      description: >
+        Thread name the log is coming from.
     - name: trace
       type: group
       description: >
